--- a/westwood_calendar_extension/manifest.json
+++ b/westwood_calendar_extension/manifest.json
@@ -6,6 +6,9 @@
              "48": "icon48.png",
             "128": "icon128.png" },
   "description": "Calendar reader extension. Built for westwood by Qrules under GNU GPL v3.",
+  "background": {
+      "scripts": ["background.js"]
+    },
   "browser_action": {
     "default_title": "Repopulate",
     "popup": "popup.html"
