--- a/westwood_calendar_extension/manifest.json
+++ b/westwood_calendar_extension/manifest.json
@@ -10,7 +10,7 @@
       "scripts": ["background.js"]
     },
   "browser_action": {
-    "default_title": "Repopulate",
+    "default_title": "Westwood Calendar",
     "popup": "popup.html"
   }
 }
