--- a/westwood_calendar_extension/manifest.json
+++ b/westwood_calendar_extension/manifest.json
@@ -11,6 +11,6 @@
     },
   "browser_action": {
     "default_title": "Westwood Calendar",
-    "popup": "popup.html"
+    "default_popup": "popup.html"
   }
 }
